- Fixed the player and map lists in the GUI not updating
- Completey remade the IRC bot, it now uses a different DLL (no more virus alert :D)
- /resetbot no longer nukes the server console
- Made it so autoload.txt doesn't save when load on /goto is enabled
- Made some changes to the right-click menu for the maps box
- Made a change to the window title, it looks much more professional
- Added missing stuff to the "Maps" tab
- Added seed option to /newlvl, check /help newlvl for more information
- Added a "Games" tab to the properties window, it's for game mode configuration
- Added server port and NickServ identify to the IRC/SQL settings tab
- Moved Zombie Survival options into the "Games" tab
- Removed the duplicate "death count" option
- Made it so plugins are loaded last, this fixes a problem with accessing levels in plugins
- Added Plugin.Events.CancelEvent()
- Some events have been updated (Might break old plugins)

v5.1.0.3
- Fixed level saving!

v5.1.0.2
- Fixed the bug that pretty much broke physics
- Fixed a bug with grass growing on physics 0 and 5
- Fixed the error that happens when a new user joins the server

v5.1.0.1
- Hopefully fixed the error-when-a-new-person-joins bug...
- Fixed the check for updates option
- Fixed AFK kick!!
- Added load-on-/goto option for maps, defaults to on and requires the "Load on /goto" server option enabled to work. Disabling the option on a map will prevent it from being loaded with /goto
- Added Zombie Survival mode! :D Use /zombiegame to start it, there are several other commands as well

v5.1.0.0
- Fixed a bug that caused the console to crash, when clicking on a player
- Fixed a bug where the server would crash, when generating economy.properties
- /draw can now be undone with /undo
- /rankmsg has been successfully added to command list (left out from last release)
- Added spam control (Mutes players after [X] amount of messages and for [Y] minutes
- Fixed delay on server start
- Fixed the updater